Working on Semi-supervised Learning... Still collecting data for minimized expected error active learning

--- a/FTIR1001.ipynb
+++ b/FTIR1001.ipynb
@@ -1070,13 +1070,7 @@
       "[9900]\tvalid_0's multi_logloss: 0.195224\n",
       "[10000]\tvalid_0's multi_logloss: 0.194301\n",
       "fold n°2\n",
-      "[100]\tvalid_0's multi_logloss: 1.35728\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[100]\tvalid_0's multi_logloss: 1.35728\n",
       "[200]\tvalid_0's multi_logloss: 1.301\n",
       "[300]\tvalid_0's multi_logloss: 1.24725\n",
       "[400]\tvalid_0's multi_logloss: 1.19492\n",
@@ -1279,13 +1273,7 @@
       "[10000]\tvalid_0's multi_logloss: 0.574535\n",
       "fold n°4\n",
       "[100]\tvalid_0's multi_logloss: 1.39424\n",
-      "[200]\tvalid_0's multi_logloss: 1.32271\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[200]\tvalid_0's multi_logloss: 1.32271\n",
       "[300]\tvalid_0's multi_logloss: 1.25367\n",
       "[400]\tvalid_0's multi_logloss: 1.18547\n",
       "[500]\tvalid_0's multi_logloss: 1.11885\n",
@@ -1789,9 +1777,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
